--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -9,6 +9,8 @@ platform = espressif
 framework = arduino
 board = nodemcuv2
 
+; set frequency to 160MHz
+board_f_cpu = 160000000L
 # set frequency to 80MHz
 board_f_flash = 80000000L
 upload_speed = 921600
