--- a/esp8266/lib/firebase-arduino/test/Makefile
+++ b/esp8266/lib/firebase-arduino/test/Makefile
@@ -16,31 +16,18 @@
 
 FIREBASE_DIR=..
 GTEST_DIR=googletest/googletest
-ARDUINOJSON_DIR=../src/third-party/arduino-json-5.3
+ARDUINOJSON_DIR=../src/third-party/arduino-json-5.6.7
 
-FIREBASE_SRCS=${FIREBASE_DIR}/src/FirebaseObject.cpp\
-	${FIREBASE_DIR}/src/FirebaseObject.h
+FIREBASE_SRCS=${FIREBASE_DIR}/src/FirebaseObject.cpp
 GTEST_SRCS=${GTEST_DIR}/src/gtest-all.cpp
-ARDUINOJSON_SRCS=${ARDUINOJSON_DIR}/src/JsonBuffer.cpp\
-	${ARDUINOJSON_DIR}/src/JsonObject.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/JsonParser.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/Encoding.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/Comments.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/IndentedPrint.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/StaticStringBuilder.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/Prettyfier.cpp\
-	${ARDUINOJSON_DIR}/src/Internals/List.cpp\
-	${ARDUINOJSON_DIR}/src/JsonVariant.cpp\
-	${ARDUINOJSON_DIR}/src/JsonArray.cpp
 
 SRCS=FirebaseArduino_test.cpp\
 	${FIREBASE_SRCS}\
-	${GTEST_SRCS}\
-	${ARDUINOJSON_SRCS}
+	${GTEST_SRCS}
 
 OBJS=${SRCS:.cpp=.o}
 
-CXXFLAGS=-I../src -Igoogletest/googletest/include -Igoogletest/googletest -std=c++11 -g
+CXXFLAGS=-I. -I../src -Igoogletest/googletest/include -Igoogletest/googletest -std=c++11 -g
 LDFLAGS=-lpthread
 
 all: check
@@ -51,6 +38,5 @@ firebase-test: ${OBJS}
 check: firebase-test
 	./firebase-test
 
-#TODO: had to echo this because it picks up FirebaseObject.h as well and deletes it :(
 clean:
-	echo rm -f ${OBJS} firebase-test
+	rm -f ${OBJS} firebase-test
