--- a/ionic/package.json
+++ b/ionic/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test3",
+  "name": "uHome",
   "version": "1.1.1",
-  "description": "test3: An Ionic project",
+  "description": "An Ionic project for uHome",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
