--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -5,7 +5,7 @@
 # http://docs.platformio.org/en/stable/projectconf.html
 #
 [env:nodemcuv2]
-platform = espressif
+platform = espressif8266
 framework = arduino
 board = nodemcuv2
 
