--- a/ionic/package.json
+++ b/ionic/package.json
@@ -1,36 +1,49 @@
 {
-  "name": "uHome",
-  "version": "1.1.1",
-  "description": "An Ionic project for uHome",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
-  "devDependencies": {
-    "@ionic/cli-plugin-cordova": "1.4.1",
-    "@ionic/cli-plugin-gulp": "1.0.2",
-    "@ionic/cli-plugin-ionic1": "2.0.1",
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-splashscreen",
-    {
-      "variables": {
-        "SENDER_ID": "XXXXXXXXXXX"
-      },
-      "locator": "phonegap-plugin-push",
-      "id": "phonegap-plugin-push"
+    "name": "uHome",
+    "version": "1.1.1",
+    "description": "An Ionic project for uHome",
+    "dependencies": {
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "gulp": "^3.5.6",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^2.0.4",
+        "phonegap-plugin-push": "^2.0.0"
+    },
+    "devDependencies": {
+        "bower": "^1.3.3",
+        "gulp-util": "^2.2.14",
+        "shelljs": "^0.3.0"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-splashscreen",
+        {
+            "variables": {
+                "SENDER_ID": "XXXXXXXXXXX"
+            },
+            "locator": "phonegap-plugin-push",
+            "id": "phonegap-plugin-push"
+        }
+    ],
+    "cordovaPlatforms": [],
+    "cordova": {
+        "plugins": {
+            "phonegap-plugin-push": {
+                "SENDER_ID": "XXXXXXX"
+            },
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-console": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
-  ],
-  "cordovaPlatforms": []
 }
