--- a/ionic/package.json
+++ b/ionic/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "cordova-android": "^6.2.3",
         "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "gulp": "^3.5.6",
         "gulp-concat": "^2.2.0",
@@ -40,7 +42,9 @@
                 "SENDER_ID": "XXXXXXX"
             },
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-console": {}
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-statusbar": {}
         },
         "platforms": [
             "android"
