--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -4,10 +4,9 @@ description: Demonstrates how to use the firebase_database plugin.
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth:
-    path: ../../firebase_auth
-  firebase_database:
-    path: ../
+  firebase: '^4.1.0'
+  firebase_auth: '0.2.3'
+  firebase_database: '0.1.0'
 
 flutter:
   uses-material-design: true
