--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   google_sign_in: "^0.3.1"
   firebase_auth: "^0.2.3"
   firebase_database: "^0.1.0"
+  shared_preferences: "^0.2.5"
 
 dev_dependencies:
   flutter_test:
