--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -4,11 +4,12 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in:
-  firebase_auth:
-  firebase_database:
-  firebase_messaging:
-  shared_preferences:
+  google_sign_in: '1.0.1'
+  firebase: '4.1.0'
+  firebase_auth: '0.3.1'
+  firebase_database: '0.1.2'
+  firebase_messaging: '0.0.7'
+  shared_preferences: '0.2.5'
 
 dev_dependencies:
   flutter_test:
@@ -23,7 +24,7 @@ flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
-  # the Icons class.
+  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -34,10 +35,10 @@ flutter:
     - android/app/google-services.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/.
+  # https://flutter.io/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/
+  # https://flutter.io/assets-and-images/#from-packages
   
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -55,3 +56,6 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  #
+  # For details regarding fonts from package dependencies, 
+  # see https://flutter.io/custom-fonts/#from-packages
