--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -5,7 +5,7 @@
 # http://docs.platformio.org/en/stable/projectconf.html
 #
 [env:esp32dev]
-platform = espressif32
+platform = https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
 board = esp32dev
 upload_speed = 921600
