--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -4,8 +4,8 @@
 # Please make sure to read documentation with examples first
 # http://docs.platformio.org/en/stable/projectconf.html
 #
-[env:esp32dev]
+[env:featheresp32]
 platform = https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
-board = esp32dev
+board = featheresp32
 upload_speed = 921600
