--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -6,7 +6,7 @@
 #
 [env:nodemcuv2]
 # platform = espressif8266
-platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
+platform = https://github.com/platformio/platform-espressif8266.git
 framework = arduino
 board = nodemcuv2
 
