--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -5,7 +5,7 @@
 # http://docs.platformio.org/en/stable/projectconf.html
 #
 [env:featheresp32]
-platform = https://github.com/platformio/platform-espressif32.git
+platform = espressif32
 framework = arduino
 board = featheresp32
 upload_speed = 921600
