--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -5,8 +5,9 @@
 # http://docs.platformio.org/en/stable/projectconf.html
 #
 [env:featheresp32]
-platform = espressif32
 #platform = espressif32@0.12.0
+#platform = espressif32
+platform = https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
 board = featheresp32
 upload_speed = 921600
