--- a/yaio-flutter/pubspec.yaml
+++ b/yaio-flutter/pubspec.yaml
@@ -10,11 +10,11 @@ dependencies:
   firebase_database:
   firebase_messaging:
   shared_preferences:
+  charts_flutter:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
