--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -5,8 +5,8 @@
 # http://docs.platformio.org/en/stable/projectconf.html
 #
 [env:nodemcuv2]
-# platform = espressif8266@1.8.0
-platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
+platform = espressif8266@1.8.0
+# platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
 framework = arduino
 board = nodemcuv2
 upload_speed = 921600
