--- a/yaio-flutter/pubspec.yaml
+++ b/yaio-flutter/pubspec.yaml
@@ -25,3 +25,15 @@ flutter:
         - asset: asset/fonts/raleway/Raleway-Medium.ttf
         - asset: asset/fonts/raleway/Raleway-SemiBold.ttf
           style: italic
+    - family: Open_Sans
+      fonts:
+        - asset: asset/fonts/Open_Sans/OpenSans-Regular.ttf
+          style: italic
+    - family: Audiowide
+      fonts:
+        - asset: asset/fonts/Audiowide/Audiowide-Regular.ttf
+          style: italic
+    - family: Roboto_Mono
+      fonts:
+        - asset: asset/fonts/Roboto_Mono/RobotoMono-Regular.ttf
+          style: italic
