--- a/smart-home/firebase.json
+++ b/smart-home/firebase.json
@@ -4,20 +4,12 @@
   },
   "hosting": {
     "public": "public",
-    "rewrites": [
-      {
-        "source": "/auth**",
-        "function": "auth"
-      },
-      {
-        "source": "/token**",
-        "function": "token"
-      },
-      {
-        "source": "/ha**",
-        "function": "ha"
-      }
-    ],
+    "rewrites": [{
+      "source": "/fakeauth**",
+      "function": "fakeauth"}, {
+      "source": "/requestsync",
+      "function": "requestsync"
+    }],
     "ignore": [
       "firebase.json",
       "database-rules.json",
