--- a/yaio-flutter/android/app/src/main/AndroidManifest.xml
+++ b/yaio-flutter/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yaio">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.flutter.yaio">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
