--- a/yaio-flutter/pubspec.yaml
+++ b/yaio-flutter/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   intl:
   google_sign_in:
   firebase_auth:
+  firebase_core:
   firebase_database:
   firebase_messaging:
   shared_preferences:
