--- a/yaio-flutter/android/.gitignore
+++ b/yaio-flutter/android/.gitignore
@@ -1,10 +1,12 @@
 *.iml
 *.class
 .gradle
+/captures/
+/gradlew
+/gradlew.bat
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
-/captures
 GeneratedPluginRegistrant.java
