--- a/yaio-flutter/pubspec.yaml
+++ b/yaio-flutter/pubspec.yaml
@@ -1,11 +1,14 @@
 name: yaio
 description: A new Flutter project.
-version: 0.4.6+1
+version: 0.4.7
+
+environment:
+  sdk: ">=2.10.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
   intl:
-  google_sign_in:
   firebase_auth:
   firebase_core:
   firebase_database:
@@ -13,10 +16,20 @@ dependencies:
   shared_preferences:
   charts_flutter:
   package_info:
+  google_sign_in:
+  flutter_local_notifications:
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+dependency_overrides:
+  # firebase_auth:
+  # firebase_auth_platform_interface:
+  # firebase_auth_web:
+  # firebase_core:
+  # firebase_core_web:
+  # firebase_messaging:
+  # firebase_messaging_platform_interface:
+  # firebase_messaging_web:
+  # Override for `flutter_local_notifications`:
+  # plugin_platform_interface: ^2.0.0
 
 flutter:
   uses-material-design: true
