--- a/yaio-flutter/pubspec.yaml
+++ b/yaio-flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: yaio
 description: A new Flutter project.
-version: 0.4.8
+version: 0.4.10
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -15,7 +15,10 @@ dependencies:
   firebase_messaging:
   shared_preferences:
   charts_flutter:
-  package_info:
+    git:
+      url: git://github.com/google/charts.git
+      path: charts_flutter
+  package_info_plus:
   google_sign_in:
   flutter_local_notifications:
 
