--- a/yaio-flutter/.gitignore
+++ b/yaio-flutter/.gitignore
@@ -23,7 +23,7 @@
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
-#/ios/Flutter/flutter_export_environment.sh
+/ios/Flutter/flutter_export_environment.sh
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
