--- a/smart-home/functions/package.json
+++ b/smart-home/functions/package.json
@@ -2,18 +2,21 @@
   "name": "smarthome-washer",
   "description": "Codelab for controlling devices through the Google Assistant",
   "engines": {
-    "node": "8"
+    "node": "16"
+  },
+  "scripts": {
+    "lint": "eslint ."
   },
   "dependencies": {
-    "actions-on-google": "^2.12.0",
+    "actions-on-google": "^3.0.0",
     "cors": "^2.8.5",
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.2.0",
-    "googleapis": "^43.0.0"
+    "firebase-admin": "^11.2.0",
+    "firebase-functions": "^4.0.1",
+    "googleapis": "^108.0.0"
   },
   "private": true,
   "devDependencies": {
-    "eslint": "^6.3.0",
+    "eslint": "^8.26.0",
     "eslint-config-google": "^0.14.0"
   }
 }
