--- a/yaio-flutter/pubspec.yaml
+++ b/yaio-flutter/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   intl:
   firebase_auth:
   firebase_auth_platform_interface:
-  firebase_core:
+  firebase_core: ^2.27.0
   firebase_database:
   firebase_messaging:
   shared_preferences:
@@ -55,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
